--- a/WRM/coding/assets/css/header.css
+++ b/WRM/coding/assets/css/header.css
@@ -7,6 +7,10 @@ header__inner .member: 로그인 / 회원가입
 #header {
     width: 100%;
     min-height: 60px;
+    position: fixed;
+    z-index: 1000;
+    background-color: var(--backgroundColor);
+    padding-bottom: 0.625rem;
 }
 
 .header__inner {
@@ -86,6 +90,11 @@ header__inner .member: 로그인 / 회원가입
 }
 
 @media (max-width:800px) {
+    #header {
+        padding-bottom: 0;
+        background-color: var(--backgroundColor);
+    }
+
     .header__inner {
         font-size: 0.875rem;
         display: flex;
@@ -106,6 +115,11 @@ header__inner .member: 로그인 / 회원가입
 }
 
 @media (max-width:500px) {
+    #header {
+        height: auto;
+        background-color: var(--backgroundColor);
+    }
+
     .header__inner {
         font-size: 0.875rem;
         display: flex;
