--- a/coding/assets/css/login.css
+++ b/coding/assets/css/login.css
@@ -1,9 +1,12 @@
 /* 
-    |-- main__login : 로그인 멘트
-    |-- login__wrap : 로그인
-
+    |-- login__container : 로그인 컨테이너
+    |-- main__login : 로그인
+    |-- main__IDfind : 아이디 찾기
+    |-- main__PWfind : 비밀번호 찾기
+    |-- login__wrap : 로그인 내용 입력
 */
 
+/* login__container */
 #main .login__container {
     width: 500px;
     height: 800px;
@@ -11,19 +14,12 @@
 }
 
 /* main__login */
-.main__login {
-    /* width: 500px;
-    height: 800px;
-    margin: 0 auto; */
-
-}
-
 .main__login .title01 {
     font-size: 1.125rem;
     font-family: var(--fontG);
     text-align: center;
     color: var(--mainColor);
-    margin-top: 120px;
+    margin-top: 100px;
 }
 
 .main__login img {
@@ -33,6 +29,7 @@
 /* login__wrap */
 #login .mail {}
 
+/* login .mail */
 #login .mail input {
     padding: 10px 20px;
     width: 100%;
@@ -43,6 +40,11 @@
     border-radius: 10px;
 }
 
+#login .mail input::placeholder {
+    color: var(--mainColor);
+}
+
+/* login .passwd */
 #login .passwd input {
     padding: 10px 20px;
     width: 100%;
@@ -53,14 +55,11 @@
     border-radius: 10px;
 }
 
-#login .mail input::placeholder {
-    color: var(--mainColor);
-}
-
 #login .passwd input::placeholder {
     color: var(--mainColor);
 }
 
+/* login .submit */
 #login .submit button {
     padding: 10px 20px;
     width: 100%;
@@ -69,4 +68,219 @@
     background-color: var(--mainColor);
     color: var(--backgroundColor);
     border-radius: 10px;
+}
+
+/* login .checks */
+#login .checks {
+    width: 80%;
+    margin: 0 auto;
+}
+
+#login .checks ul {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
+    color: var(--black300);
+}
+
+#login .checks li {
+    text-align: center;
+}
+
+#login .checks li a {
+    text-decoration: none;
+}
+
+/* main__IDfind */
+.main__IDfind .title01 {
+    font-size: 1.25rem;
+    font-family: var(--fontG);
+    text-align: center;
+    color: var(--mainColor);
+}
+
+.main__IDfind .title02 {
+    font-size: 2.875rem;
+    font-family: var(--fontG);
+    font-weight: 600;
+    text-align: center;
+    color: var(--mainColor);
+    margin-top: 100px;
+}
+
+.main__IDfind img {
+    margin-top: 40px;
+    width: 60%;
+    height: auto;
+    margin-left: 88px;
+    margin-bottom: 20px;
+
+}
+
+#IDfind .mail input {
+    padding: 10px 20px;
+    width: 100%;
+    height: 60px;
+    margin-top: 10px;
+    background-color: var(--pointColor);
+    color: var(--mainColor);
+    border-radius: 10px;
+}
+
+#IDfind .mail input::placeholder {
+    color: var(--mainColor);
+}
+
+#IDfind .nickname input {
+    padding: 10px 20px;
+    width: 100%;
+    height: 60px;
+    margin-top: 10px;
+    background-color: var(--pointColor);
+    color: var(--mainColor);
+    border-radius: 10px;
+}
+
+#IDfind .nickname input::placeholder {
+    color: var(--mainColor);
+}
+
+#IDfind .submit button {
+    padding: 10px 20px;
+    width: 100%;
+    height: 60px;
+    margin-top: 20px;
+    background-color: var(--mainColor);
+    color: var(--backgroundColor);
+    border-radius: 10px;
+}
+
+#IDfind .checks {
+    width: 80%;
+    margin: 0 auto;
+}
+
+#IDfind .checks ul {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+    color: var(--black300);
+    font-family: var(--fontN);
+    font-size: 12px;
+}
+
+#IDfind .checks li {
+    text-align: center;
+}
+
+#IDfind .checks li a {
+    text-decoration: none;
+}
+
+/* main__PWfind */
+.main__PWfind .title01 {
+    font-size: 1.25rem;
+    font-family: var(--fontG);
+    text-align: center;
+    color: var(--mainColor);
+}
+
+.main__PWfind .title02 {
+    font-size: 2.875rem;
+    font-family: var(--fontG);
+    font-weight: 600;
+    text-align: center;
+    color: var(--mainColor);
+    margin-top: 100px;
+}
+
+.main__PWfind img {
+    margin-top: 40px;
+    width: 60%;
+    height: auto;
+    margin-left: 88px;
+    margin-bottom: 20px;
+
+}
+
+#PWfind .mail {
+    width: 100%;
+    display: flex;
+}
+
+#PWfind .mail input {
+    padding: 10px 20px;
+    width: 70%;
+    height: 60px;
+    margin-top: 10px;
+    background-color: var(--pointColor);
+    color: var(--mainColor);
+    border-radius: 10px;
+    margin-right: 10px;
+}
+
+#PWfind .mail button {
+    width: 30%;
+    height: 60px;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: var(--mainColor);
+    border-radius: 10px;
+    margin-top: 10px;
+    color: var(--backgroundColor);
+
+}
+
+#PWfind .mail input::placeholder {
+    color: var(--mainColor);
+}
+
+#PWfind .password input {
+    padding: 10px 20px;
+    width: 100%;
+    height: 60px;
+    margin-top: 10px;
+    background-color: var(--pointColor);
+    color: var(--mainColor);
+    border-radius: 10px;
+}
+
+#PWfind .password input::placeholder {
+    color: var(--mainColor);
+}
+
+#PWfind .submit button {
+    padding: 10px 20px;
+    width: 100%;
+    height: 60px;
+    margin-top: 20px;
+    background-color: var(--mainColor);
+    color: var(--backgroundColor);
+    border-radius: 10px;
+}
+
+#PWfind .checks {
+    width: 80%;
+    margin: 0 auto;
+}
+
+#PWfind .checks ul {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+    color: var(--black300);
+    font-family: var(--fontN);
+    font-size: 12px;
+}
+
+#PWfind .checks li {
+    text-align: center;
+}
+
+#PWfind .checks li a {
+    text-decoration: none;
 }
