--- a/WRM/coding/assets/css/header.css
+++ b/WRM/coding/assets/css/header.css
@@ -6,7 +6,7 @@ header__inner .member: 로그인 / 회원가입
 
 #header {
     width: 100%;
-    min-height: 60px;
+    height: 60px;
     position: fixed;
     z-index: 1000;
     background-color: var(--backgroundColor);
@@ -46,7 +46,6 @@ header__inner .member: 로그인 / 회원가입
 }
 
 .header__inner .nav>ul>li>a {
-    width: 100%;
     display: inline-block;
     font-size: 1rem;
     font-family: var(--fontG);
