--- a/WRM/coding/assets/css/main.css
+++ b/WRM/coding/assets/css/main.css
@@ -18,7 +18,7 @@
     color: var(--mainColor);
 }
 
-@media (max-width:1000px) {
+@media (max-width:1150px) {
 
     #section {
         height: 80vh;
@@ -181,180 +181,6 @@
 
 /* // .banner */
 
-#main .main__our {
-    width: 100%;
-    height: 100%;
-    background-color: var(--mainColor);
-    display: flex;
-    flex-direction: column;
-    margin-top: 12.5rem;
-}
-
-.main__our .container {
-    display: flex;
-}
-
-.main__our .container .content1 {
-    width: 50%;
-    height: 100%;
-    padding-top: 9.375rem;
-}
-
-.main__our .container .content1 h2 {
-    width: 80%;
-    font-family: var(--fontM);
-    font-weight: 900;
-    font-size: 3.75rem;
-    padding: 1rem 1.87rem;
-    background-color: var(--white);
-    color: var(--mainColor);
-    text-align: center;
-    border-radius: 1.25rem;
-}
-
-.main__our .container .content1 p {
-    padding-top: 3.125rem;
-    line-height: 1.8;
-    color: var(--white);
-    font-family: var(--fontN);
-    font-weight: 500;
-    font-size: 1.25rem;
-
-}
-
-.main__our .container .content2 {
-    width: 50%;
-    height: 100%;
-    padding-top: 11.175rem;
-}
-
-.main__our .container .content2 .box {
-    width: 50%;
-    height: 50%;
-    background-color: var(--white);
-    text-align: center;
-    border-radius: 1.25rem;
-}
-
-.main__our .container .content2 .box img {
-    width: 70%;
-    height: 40%;
-    padding: 2rem;
-}
-
-.main__our .container .content2 p {
-    color: var(--white);
-    font-family: var(--fontN);
-    padding-top: 2.5rem;
-    padding-bottom: 10rem;
-    font-size: 1.25rem;
-}
-
-@media (max-width:1000px) {
-
-    .main__our .container {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .main__our .container .content1 {
-        width: 100%;
-        text-align: center;
-    }
-
-    .main__our .container .content1 h2 {
-        font-size: 3rem;
-        width: 100%;
-    }
-
-    .main__our .container .content1 p {
-        padding: 1rem;
-
-    }
-
-    .main__our .container .content2 {
-        padding-top: 5rem;
-        width: 100%;
-        display: flex;
-        margin-bottom: 7rem;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .main__our .container .content2 .box {
-        width: 40%;
-        height: 40%;
-    }
-
-    .main__our .container .content2 p {
-        width: 50%;
-        padding: 1.25rem;
-        font-size: 1rem;
-    }
-}
-
-
-@media (max-width:500px) {
-    #main .main__our {
-        margin-top: 5rem;
-    }
-
-    .main__our .container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .main__our .container .content1 {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding-top: 5rem;
-    }
-
-    .main__our .container .content1 h2 {
-        font-size: 2rem;
-        width: 80%;
-    }
-
-    .main__our .container .content1 p {
-        padding: 0.875rem;
-        text-align: center;
-        font-size: 1rem;
-
-    }
-
-    .main__our .container .content2 {
-        padding-top: 5rem;
-        width: 100%;
-        display: flex;
-        margin-bottom: 7rem;
-        flex-direction: column;
-    }
-
-    .main__our .container .content2 .box {
-        width: 80%;
-        height: 100%;
-    }
-
-    .main__our .container .content2 .box img {
-        width: 50%;
-        height: 50%;
-        padding: 2rem;
-    }
-
-    .main__our .container .content2 p {
-        width: 80%;
-        padding: 1rem;
-        font-size: 0.875rem;
-        line-height: 1.5;
-        padding-bottom: 1rem;
-    }
-}
-
-/* //main__our */
-
 .main__info .container .main__info__title {
     display: flex;
     justify-content: center;
@@ -440,13 +266,11 @@
     align-items: center;
 }
 
-.main__info__post .content2 {
-    margin-top: 5rem;
-    width: 100%;
-    height: 100%;
+.post {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    padding: 2rem 2rem 0 2rem;
 }
 
 #post1,
@@ -459,13 +283,6 @@
     border-radius: 30px;
 }
 
-.post {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 2rem 2rem 0 2rem;
-}
-
 #post1 .post img,
 #post2 .post img,
 #post3 .post img {
@@ -474,6 +291,15 @@
     min-height: 345px;
     object-fit: cover;
     border-radius: 22px;
+}
+
+@media (max-width:500px) {
+
+    #post1,
+    #post2,
+    #post3 {
+        margin-bottom: 2rem;
+    }
 }
 
 .post .tit {
@@ -492,16 +318,25 @@
 }
 
 .post .day {
-    padding-top: 0.3125rem;
     font-size: 0.875rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     color: var(--black500);
-    font-family: var(--fontN);
-    font-weight: 400;
+}
+
+@media (max-width:500) {}
+
+.post .day li:nth-child(2) {
+    border: 1px solid var(--mainColor);
+    padding: 4px 10px;
+    border-radius: 20px;
+    color: var(--mainColor);
 }
 
 .post__con {
     width: 100%;
-    padding-top: 1.25rem;
+    margin-top: 1.25rem;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -512,6 +347,7 @@
     width: 50%;
     background-color: var(--pointColor);
     border-radius: 0 0 0 30px;
+    border-right: 1px solid var(--mainColor);
 }
 
 
@@ -530,12 +366,9 @@
 
 .post__con .post__right {
     width: 50%;
-    background-color: var(--mainColor);
+    background-color: var(--pointColor);
     border-radius: 0 0 30px 0;
 }
-
-
-
 
 .post__con .post__right img {
     width: 10px;
@@ -547,134 +380,21 @@
 .post__con .post__right a {
     display: inline-block;
     padding: 20px;
-    color: var(--white);
+    color: var(--mainColor);
 }
 
-
-@media (max-width:1000px) {
-    .main__info__post .content1 {
-        display: flex;
-    }
-
-    .main__info__post .content2 {
-        margin-top: 1rem;
-        display: flex;
-    }
-
-    .post {
-        padding: 1.25rem 1.25rem 0 1.25rem;
-    }
-
-    .post__con {
-        width: 100%;
-        padding-top: 1.25rem;
-        display: flex;
-        justify-content: center;
-        text-align: center;
-        border-radius: 0 0 30px 30px;
-    }
-
-    .post__con .post__left {
-        width: 50%;
-        background-color: var(--pointColor);
-        border-radius: 0 0 0 30px;
-    }
-
-    .post__con .post__left a {
-        display: inline-block;
-        padding: 20px;
-        color: var(--mainColor);
-    }
-
-    .post__con .post__left>img {
-        width: 10px;
-        height: 10px;
-        padding-top: 6px;
-        padding-left: 2px;
-    }
-
-    .post__con .post__right {
-        width: 50%;
-        background-color: var(--mainColor);
-        border-radius: 0 0 30px 0;
-    }
-
-    .post__con .post__right img {
-        width: 10px;
-        height: 10px;
-        padding-top: 6px;
-        padding-left: 2px;
-    }
-
-    .post__con .post__right a {
-        display: inline-block;
-        padding: 20px;
-        color: var(--white);
-    }
-}
+@media (max-width:1000px) {}
 
 @media (max-width:500px) {
+    .main__info .container .main__info__title {
+        margin-top: 6rem;
+    }
+
     .main__info__post .content1 {
         display: flex;
         flex-direction: column;
-    }
-
-    .main__info__post .content2 {
-        margin-top: 1rem;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .post {
-        margin-top: 2rem;
-        margin-left: 0;
-    }
-
-    .post__con {
-        width: 100%;
-        padding-top: 1.25rem;
-        display: flex;
-        justify-content: center;
-        text-align: center;
-        border-radius: 0 0 30px 30px;
-    }
-
-    .post__con .post__left {
-        width: 50%;
-        background-color: var(--pointColor);
-        border-radius: 0 0 0 30px;
-    }
-
-    .post__con .post__left a {
-        display: inline-block;
-        padding: 20px;
-        color: var(--mainColor);
-    }
-
-    .post__con .post__left img {
-        width: 10px;
-        height: 10px;
-        padding-top: 6px;
-        padding-left: 2px;
-    }
-
-    .post__con .post__right {
-        width: 50%;
-        background-color: var(--mainColor);
-        border-radius: 0 0 30px 0;
-    }
-
-    .post__con .post__right img {
-        width: 10px;
-        height: 10px;
-        padding-top: 6px;
-        padding-left: 2px;
-    }
-
-    .post__con .post__right a {
-        display: inline-block;
-        padding: 20px;
-        color: var(--white);
+        flex-wrap: wrap;
+        height: 100%;
     }
 }
 
@@ -692,6 +412,18 @@
     padding: 5rem;
     font-size: 1.5rem;
     color: var(--white);
+}
+
+@media (max-width:500px) {
+
+    .main__sub {
+        margin-top: 5rem;
+    }
+
+    .main__sub a {
+        padding: 2rem;
+        font-size: 0.875rem;
+    }
 }
 
 /* //main__sub */
@@ -773,7 +505,7 @@
     height: 100%;
 }
 
-.main__rank__post .content {
+.main__rank__post .content1 {
     margin-top: 5rem;
     width: 100%;
     height: 100%;
@@ -782,116 +514,65 @@
     align-items: center;
 }
 
-.rank__post {
-    width: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: left;
+#rank__post1,
+#rank__post2,
+#rank__post3 {
+    width: 100%;
+    height: 100%;
     background-color: var(--white);
-    margin-left: 1.25rem;
+    margin-right: 1rem;
     border-radius: 30px;
     position: relative;
-    ;
 }
 
-.rank__post:nth-child(1):after {
-    content: '1';
-    background-image: url(../ico/rank-ico.svg);
-    width: 63.73px;
-    height: 103.89px;
-    font-size: 35px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#rank__post1 .post img,
+#rank__post2 .post img,
+#rank__post3 .post img {
+    width: 100%;
+    max-height: 345px;
+    min-height: 345px;
+    object-fit: cover;
+    border-radius: 22px;
+}
+
+#rank__post1::after {
+    content: '';
+    width: 100%;
+    height: 20%;
     position: absolute;
-    color: var(--white);
-    left: 8%;
     top: 0;
+    right: -32px;
+    background-image: url(../ico/rank_ico-1.svg);
+    background-repeat: no-repeat;
 }
 
-.rank__post:nth-child(2):after {
-    content: '2';
-    background-image: url(../ico/rank-ico.svg);
-    width: 63.73px;
-    height: 103.89px;
-    font-size: 35px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+#rank__post2::after {
+    content: '';
+    width: 100%;
+    height: 20%;
     position: absolute;
-    color: var(--white);
-    left: 8%;
     top: 0;
+    right: -32px;
+    background-image: url(../ico/rank_ico-2.svg);
+    background-repeat: no-repeat;
 }
 
-.rank__post:nth-child(3):after {
-    content: '3';
-    background-image: url(../ico/rank-ico.svg);
-    width: 63.73px;
-    height: 103.89px;
-    font-size: 35px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+#rank__post3::after {
+    content: '';
+    width: 100%;
+    height: 20%;
     position: absolute;
-    color: var(--white);
-    left: 8%;
     top: 0;
-}
-
-#rank__post1 img,
-#rank__post2 img,
-#rank__post3 img {
-    width: 283px;
-    height: 348px;
-    padding: 2rem 2rem 0 2rem;
-    border-radius: 18px;
-}
-
-.rank__post .tit {
-    font-size: 1.25rem;
-    color: var(--mainColor);
-    padding-top: 0.625rem;
-    font-weight: 700;
-    font-family: var(--fontG);
-    padding-left: 2rem;
-}
-
-.rank__post .pic {
-    font-size: 1rem;
-    font-family: var(--fontG);
-    font-weight: 500;
-    padding-left: 2rem;
-}
-
-.rank__post .day {
-    font-size: 0.875rem;
-    color: var(--black600);
-    padding-left: 2rem;
-}
-
-.rank__post a {
-    display: inline-block;
-    margin-top: 1.25rem;
-    padding: 1.25rem;
-    text-align: center;
-    background-color: var(--pointColor);
-    color: var(--mainColor);
-    font-size: 0.875rem;
-    border-radius: 0 0 2rem 2rem;
-    transition: all 0.3s;
-}
-
-.rank__post a:hover {
-    color: var(--white);
-    background-color: var(--mainColor);
+    right: -32px;
+    background-image: url(../ico/rank_ico-3.svg);
+    background-repeat: no-repeat;
 }
 
 @media (max-width:1000px) {
     .main__rank__post .content1 {
         display: flex;
-        flex-direction: column;
     }
 
     .rank__post {
@@ -909,8 +590,13 @@
 }
 
 @media (max-width:500px) {
-    .main__rank__post .content {
+    .main__rank__post {
+        margin-bottom: 5rem;
+    }
+
+    .main__rank__post .content1 {
         display: flex;
+        flex-wrap: wrap;
         flex-direction: column;
     }
 
@@ -918,12 +604,19 @@
         margin-top: 2rem;
         margin-left: 0;
     }
+
+    #rank__post1,
+    #rank__post2,
+    #rank__post3 {
+        margin-bottom: 2rem;
+    }
 }
 
 /* //main__crew */
 
 .main__crew {
     background-color: var(--pointColor);
+    padding-bottom: 12.5rem;
 }
 
 .main__crew .container .main__crew__title {
@@ -963,6 +656,15 @@
 }
 
 @media (max-width:500px) {
+
+    .main__crew {
+        padding-bottom: 5.5rem;
+    }
+
+    .main__crew .container .main__crew__title {
+        padding-top: 5rem;
+    }
+
     .main__crew__title h5 {
         font-size: 2rem;
     }
@@ -978,45 +680,272 @@
     height: 100%;
     margin-top: 5rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
-#crew__rank1 {
-    width: 20%;
-    background-color: var(--mainColor);
-    margin-right: 1.25rem;
-}
-
-#crew__rank2 {
-    width: 20%;
-    background-color: var(--mainColor);
-    margin-right: 1.25rem;
-}
-
-#crew__rank3 {
-    width: 20%;
-    background-color: var(--mainColor);
-    margin-right: 1.25rem;
-}
-
-#crew__rank4 {
-    width: 20%;
-    background-color: var(--mainColor);
-}
-
-.crew_rank {
-    width: 100%;
+.crew__rank1,
+.crew__rank2,
+.crew__rank3,
+.crew__rank4 {
+    width: 23%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--mainColor);
+    margin: 5px;
+    padding-bottom: 1.875rem;
+    padding-left: 2rem;
 }
+
+.crew__rank1>img,
+.crew__rank2>img,
+.crew__rank3>img,
+.crew__rank4>img {
+    width: 40%;
+    height: 100%;
+    padding-top: 2.5rem;
+}
+
+.crew-tit {
+    margin-top: 1.875rem;
+    font-size: 0.875rem;
+    width: 25%;
+    border-radius: 30px;
+    text-align: center;
+    border: 1px solid var(--white);
+    color: var(--white);
+}
+
+.crew-day {
+    margin-top: 1rem;
+    font-size: 1.625rem;
+    font-family: var(--fontG);
+    font-weight: bold;
+    color: var(--white);
+}
+
+@media (max-width:500px) {
+
+    .crew__rank1,
+    .crew__rank2,
+    .crew__rank3,
+    .crew__rank4 {
+        padding-left: 1rem;
+    }
+
+    .crew-tit {
+        margin-top: 1rem;
+        font-size: 0.75rem;
+        width: 50%;
+    }
+
+    .crew-day {
+        margin-top: 0.875rem;
+        font-size: 0.875rem;
+    }
+
+    .crew__rank1>img,
+    .crew__rank2>img,
+    .crew__rank3>img,
+    .crew__rank4>img {
+        padding-top: 1rem;
+    }
+}
+
 
 .cover {
     width: 100%;
-    height: 200px;
     margin-top: 160px;
     background-color: var(--mainColor);
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.first-parallel {
+    color: var(--white);
+    font-size: 24px;
+    text-transform: uppercase;
+    font-family: var(--fontM);
+    font-weight: 900;
+    padding: 2rem;
+}
+
+/* //crew__rank */
+
+.main__news {
+    padding-bottom: 10rem;
+}
+
+.main__news .container .main__news__title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 10rem;
+    color: var(--mainColor);
+}
+
+.main__news__title h6 {
+    text-transform: uppercase;
+    font-family: var(--fontO);
+    letter-spacing: -1px;
+    font-size: 2.875rem;
+    padding: 0.625rem;
+    font-weight: 900;
+
+}
+
+
+.main__news__title p {
+    font-size: 1.25rem;
+    font-family: var(--fontN);
+    font-weight: 500;
+}
+
+@media (max-width:1000px) {
+    .main__news__title h6 {
+        font-size: 2.6rem;
+    }
+
+    .main__news__title p {
+        font-size: 1rem;
+    }
+
+}
+
+@media (max-width:500px) {
+    .main__news__title h6 {
+        font-size: 2rem;
+    }
+
+    .main__news__title p {
+        font-size: 1rem;
+    }
+
+}
+
+.main__news__post {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.main__news__post .content1,
+.main__news__post .content2 {
+    display: flex;
+}
+
+.main__news__post .content1 .post>a:hover,
+.main__news__post .content2 .post>a:hover {
+    outline: 10px solid var(--mainColor);
+    border-radius: 30px;
+    transition: all 0.3s;
+}
+
+@media (max-width:500px) {
+
+    .main__news__post .content1,
+    .main__news__post .content2 {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+/* //main__news */
+
+.main__community {
+    padding-bottom: 10rem;
+    background-color: var(--mainColor);
+}
+
+.main__community .container .main__community__title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 10rem;
+    color: var(--white);
+}
+
+.main__community__title h6 {
+    text-transform: uppercase;
+    font-family: var(--fontO);
+    letter-spacing: -1px;
+    font-size: 2.875rem;
+    padding: 0.625rem;
+    font-weight: 900;
+}
+
+.main__community__title p {
+    font-size: 1.25rem;
+    font-family: var(--fontN);
+    font-weight: 500;
+}
+
+@media (max-width:1000px) {
+    .main__community__title h6 {
+        font-size: 2.6rem;
+    }
+
+    .main__community__title p {
+        font-size: 1rem;
+    }
+
+}
+
+@media (max-width:500px) {
+    .main__community__title h6 {
+        font-size: 2rem;
+    }
+
+    .main__community__title p {
+        font-size: 1rem;
+    }
+
+}
+
+.main__community__mojib {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 3.75rem;
+}
+
+.main__community__mojib .box1,
+.main__community__mojib .box2,
+.main__community__mojib .box3,
+.main__community__mojib .box4 {
+    width: 20%;
+    background-color: var(--pointColor);
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 2.5rem;
+    border-radius: 20px;
+
+}
+
+.box_title {
+    display: block;
+    padding-top: 2.125rem;
+    padding-left: 1.875rem;
+    color: var(--mainColor);
+    font-size: 1.625rem;
+    font-family: var(--fontG);
+    font-weight: bold;
+}
+
+.box_title svg {
+    padding-left: 30px;
+}
+
+.main__community__mojib .box1 img,
+.main__community__mojib .box2 img,
+.main__community__mojib .box3 img,
+.main__community__mojib .box4 img {
+    padding-top: 2.375rem;
+    width: 50%;
+    padding-left: 5rem;
 }
