--- a/WRM/coding/assets/css/header.css
+++ b/WRM/coding/assets/css/header.css
@@ -88,10 +88,37 @@ header__inner .member: 로그인 / 회원가입
     color: var(--pointColor);
 }
 
+
+@media (max-width:1200px) {
+    #header {
+        padding-bottom: 0;
+        background-color: var(--backgroundColor);
+        padding-bottom: 0.625rem;
+    }
+
+    .header__inner {
+        font-size: 0.875rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .header__inner .nav>ul>li {
+        text-align: center;
+        margin: 0 1rem;
+    }
+
+    .header__inner .nav>ul>li>a {
+        padding: 0.625rem 1.25rem;
+
+    }
+}
+
 @media (max-width:800px) {
     #header {
         padding-bottom: 0;
         background-color: var(--backgroundColor);
+        padding-bottom: 0.625rem;
     }
 
     .header__inner {
@@ -110,7 +137,6 @@ header__inner .member: 로그인 / 회원가입
         width: 100%;
         padding: 0.75rem;
     }
-
 }
 
 @media (max-width:500px) {
