--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,9 +9,10 @@
 /* 섹션 설정 */
 @import "header.css";
 @import "footer.css";
-@import "member.css";
-@import "board.css";
+@import "login.css";
+@import "notice.css";
 @import "main.css";
+@import "comm_notice.css";
 
 /* 로그인 로그아웃 */
 /* 외부CSS  */
